test: cover external-pass lifetime, arena hygiene, JEP 454 toolchain
Add three new test suites and update every existing test/benchmark fixture
to match the source-side hardening landed in d04ca0b.

mlirlib/tests/ExternalPassLifetimeSpec exercises three previously-uncovered
invariants of the reworked external-pass surface: (1) PassManager retains
the Pass's callback arena past the caller scope and closes it from
mlirPassManagerDestroy; (2) PassManager.runOnOp re-throws an upcall failure
as PassRunFailure preserving the original throwable identity and capturing
non-NULL operation/pass segments; (3) the captured-failure slot is cleared
between runs so a signalFailure-only second run does not surface the
first run's stale sentinel. The fixture uses nested try/finally so the
Context/Module/PassManager are destroyed even when an assertion fails,
and post-destroy assertions run inside the inner finally so they execute
on the failure path. zaozi/tests/ArenaLifetimeSpec is the regression
guard for the `try/finally arena.close()` pattern itself — removing the
finally line must break it. zaozi/lit/tests/ExternalPassWalk drives an
end-to-end run against the actual gcd.mlir resource, walks hw.module
ports through the new moduleTypeGetPort/HWModulePort API, and FileCheck-
asserts the exact port name/width/direction ordering.

Wrap every existing test/benchmark Arena.ofConfined() in
try/finally arena.close() so an assertion failure no longer leaks the
arena. utest's macro rejects test() nested inside try/finally, so
OmSmoke/Smoke/SMTSmoke route per-leaf Arena+Context lifecycle through
utestBeforeEach/utestAfterEach hooks instead.

Centralise scala-cli JVM options on the lit side: introduce a %JAVAOPTS
substitution backed by config.java_opts in both stdlib and zaozi lit
configs, drop the now-unneeded --enable-preview flag from every .scala/.sc
fixture, and add a %REPOROOT substitution to zaozi/lit so
ExternalPassWalk can reference circtlib/tests/resources/gcd.mlir without
embeddin